--- a/CancherksWebApp/Pages/Shared/_Layout.cshtml
+++ b/CancherksWebApp/Pages/Shared/_Layout.cshtml
@@ -110,6 +110,8 @@
     <script src="~/js/site.js" asp-append-version="true"></script> 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script> <!-- For the datepicker -->
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script> <!-- For the datepicker -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.12/jquery.validate.unobtrusive.min.js"></script>
     
 
     
