--- a/CancherksWebApp/wwwroot/css/site.css
+++ b/CancherksWebApp/wwwroot/css/site.css
@@ -522,3 +522,30 @@ img {
 .visible{
 visibility: visible;
 }
+
+/* timepickers format */
+
+input[type="time"] {
+    border: 1px solid var(--colorMain);
+}
+
+input[type="time"]:hover {
+    background: var(--colorMainTrans);
+}
+
+input[type="time"]::-webkit-calendar-picker-indicator {
+    
+    border: 1px solid var(--colorMain);
+    border-radius: 2px; 
+    color: var(--colorMain);
+    
+}
+
+input[type="time"]:hover::-webkit-calendar-picker-indicator {
+    background-color: var(--colorMainTrans); 
+}
+
+.custom-time-picker:focus {
+    outline: none; 
+    border-color: var(--colorMain);  
+}
