--- a/CancherksWebApp/Pages/Shared/_AdminLayout.cshtml
+++ b/CancherksWebApp/Pages/Shared/_AdminLayout.cshtml
@@ -9,7 +9,7 @@
     <link href="~/lib/bootstrap-icons/font/bootstrap-icons.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/CancherksWebApp.styles.css" asp-append-version="true" />
-
+    <link href="~/css/radiostyle.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"> <!-- For the datepicker -->
 
 </head>
