--- a/CancherksWebApp/Pages/Admin/AgregarInstalacion.cshtml
+++ b/CancherksWebApp/Pages/Admin/AgregarInstalacion.cshtml
@@ -20,30 +20,31 @@
             <div>
                 <form method="post" id="installationForm" enctype="multipart/form-data">
                     <div class="mb-3">
-                        <label class="form-label">Nombre</label>
-                        <input type="text" class="form-control" id="Name" asp-for="Installation.Name" placeholder="Ingrese el nombre.">
+                        <label class="form-label" asp-for="Installation.Name">Nombre</label>
+                        <input type="text" class="form-control" asp-for="Installation.Name">
                         <span asp-validation-for="Installation.Name" class="text-danger"></span>
                     </div>
                     <div class="mb-3">
-                        <label class="form-label">Ubicación</label>
-                        <input type="text" class="form-control" id="Location" asp-for="Installation.Location" placeholder="Ingrese la ubicación.">
+                        <label class="form-label" asp-for="Installation.Location">Ubicación</label>
+                        <input type="text" class="form-control" asp-for="Installation.Location">
                         <span asp-validation-for="Installation.Location" class="text-danger"></span>
                     </div>
                     <div class="mb-3">
-                        <label class="form-label">Cantidad Máxima Personas</label>
-                        <input type="text" class="form-control" id="MaxCantPeople" asp-for="Installation.MaxCantPeople" placeholder="Ingrese la cantidad máxima permitida en la instalación.">
+                        <label class="form-label" asp-for="Installation.MaxCantPeople">Cantidad Máxima Personas</label>
+                        <input type="text" class="form-control" asp-for="Installation.MaxCantPeople">
                         <span asp-validation-for="Installation.MaxCantPeople" class="text-danger"></span>
                     </div>
                     <div class="mb-3">
-                        <label class="form-label">Tiempo máximo por reservación</label>
-                        <input type="text" class="form-control" id="TimeSplitReservation" asp-for="Installation.TimeSplitReservation" placeholder="Ingrese el tiempo máximo por reservación permitido.">
+                        <label class="form-label" asp-for="Installation.TimeSplitReservation">Tiempo máximo por reservación</label>
+                        <input type="text" class="form-control" asp-for="Installation.TimeSplitReservation">
                         <span asp-validation-for="Installation.TimeSplitReservation" class="text-danger"></span>
                     </div>
                     <div class="mb-3">
-                        <label class="form-label">Descripción</label>
-                        <textarea class="form-control" id="Description" asp-for="Installation.Description" placeholder="Ingrese la descripción." style="height: 100px;"></textarea>
+                        <label class="form-label" asp-for="Installation.Description">Descripción</label>
+                        <textarea class="form-control" asp-for="Installation.Description" style="height: 100px;"></textarea>
                         <span asp-validation-for="Installation.Description" class="text-danger"></span>
-                    </div>
+                    </div>               
+
                     <div class="mb-3">
                         <label class="form-label">Deportes</label>
                         <div class="checkbox-container full-width">
@@ -66,7 +67,7 @@
                         <button class="file-upload-btn" type="button" onclick="$('.file-upload-input').trigger( 'click' )">Agregue una imagen</button>
 
                         <div class="image-upload-wrap">
-                            <input class="file-upload-input" type='file' onchange="readURL(this);" asp-for="Photo" accept="image/*" />
+                            <input class="file-upload-input" type='file' onchange="readURL(this);" asp-for="Photo" accept="image/*" aria-label="Agregue una imagen " />
                             <div class="drag-text">
                                 <h3>Presione click o arraste la imagen que desea subir.</h3>
                             </div>
