--- a/CancherksWebApp/Pages/Shared/_Layout.cshtml
+++ b/CancherksWebApp/Pages/Shared/_Layout.cshtml
@@ -37,6 +37,7 @@
                         var reportManagementIsActive = Context.Request.Path.Value.Contains("/Admin/Reportes");
                         var addInstallationManagementIsActive = Context.Request.Path.Value.Contains("/Admin/AgregarInstalacion");
                         var modifyInstallationManagementIsActive = Context.Request.Path.Value.Contains("/Admin/ModificarInstalacion");
+                        var searchInstallationManagementIsActive = Context.Request.Path.Value.Contains("/Admin/BuscarInstalacion");
 
                     }
 
@@ -60,7 +61,7 @@
                             <a class="nav-link @(addInstallationManagementIsActive ? "activeNav" : "")" asp-area="" asp-page="/Admin/AgregarInstalacion">Agregar Instalacion</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link @(modifyInstallationManagementIsActive ? "activeNav" : "")" asp-area="" asp-page="/Admin/ModificarInstalacion">Modificar Instalacion</a>
+                            <a class="nav-link @(modifyInstallationManagementIsActive ? "activeNav" : "")" asp-area="" asp-page="/Admin/BuscarInstalacion">Modificar Instalacion</a>
                         </li>
                     </ul>
                 </div>
