--- a/CancherksWebApp/Pages/Solicitante/Publicas.cshtml
+++ b/CancherksWebApp/Pages/Solicitante/Publicas.cshtml
@@ -14,17 +14,17 @@
 }
 <section class="container-fluid px-5 py-3">
 
-    <h3 style="margin-bottom: 2rem;">Solicitudes </h3>
+    <h3 style="margin-bottom: 2rem;">Instalaciones </h3>
     <dropdown class="dropdown">
         <button class="btn btn-secondary dropdown-toggle custom-dropdown-button" type="button" id="dropdownInstallations" data-bs-toggle="dropdown" aria-expanded="false">
             Selecione un Deporte
         </button>
         <ul class="dropdown-menu custom-dropdown-options" aria-labelledby="dropdownInstallations">
 
-            <li><a class="dropdown-item custom-dropdown-item" data-id="0" href="#" onclick="loadInstallation(0)">Todos</a></li>
+            <li><a class="dropdown-item custom-dropdown-item" data-id="0" href="#" onclick="loadPublicInstallation(0)">Todos</a></li>
             @foreach (var i in Model.sports)
             {
-                <li><a class="dropdown-item custom-dropdown-item" data-id="@i.Id" href="#" onclick="loadInstallation(@i.Id)">@i.Name</a></li>
+                <li><a class="dropdown-item custom-dropdown-item" data-id="@i.Id" href="#" onclick="loadPublicInstallation(@i.Id)">@i.Name</a></li>
             }
         </ul>
 
@@ -56,80 +56,109 @@
     </div>
 </section>
 
-<section class="container-fluid px-5 py-3">
-    <h3 style="margin-bottom: 2rem;">Reserva</h3>
-    <div class="d-flex gx-3">
+<section class ="container-fluid px-5 py-3">
+    <h3 style="margin-bottom: 2rem;">Horario de la Semana</h3>
 
-        <Schedule class="row">
-            <datepicker class="px-0 mb-2" style="display: flex; justify-content: center; flex-grow: 1;">
-                <div class="w-100">
-                    <div class="col-12">
-                        <div class="input-group date datepicker-container">
-                            <input type="text" class="form-control datepickerInput" id="datepickerQuery" placeholder="Fecha a consultar" />
-                            <span class="input-group-append datepickerIcon">
-                                <span class="input-group-text bg-light d-block">
-                                    <i class="bi bi-calendar-check"></i>
-                                </span>
-                            </span>
-                        </div>
+	<p class="codyhouse">Este es el horario de la semana Lunes - Domingo</p>
+	<div class="cd-schedule loading">
+		<div class="timeline">
+			<ul>
+				<li><span>07:00</span></li>
+				<li><span>07:30</span></li>
+				<li><span>08:00</span></li>
+				<li><span>08:30</span></li>
+				<li><span>09:00</span></li>
+				<li><span>09:30</span></li>
+				<li><span>10:00</span></li>
+				<li><span>10:30</span></li>
+				<li><span>11:00</span></li>
+				<li><span>11:30</span></li>
+				<li><span>12:00</span></li>
+				<li><span>12:30</span></li>
+				<li><span>13:00</span></li>
+				<li><span>13:30</span></li>
+				<li><span>14:00</span></li>
+				<li><span>14:30</span></li>
+				<li><span>15:00</span></li>
+				<li><span>15:30</span></li>
+				<li><span>16:00</span></li>
+				<li><span>16:30</span></li>
+				<li><span>17:00</span></li>
+				<li><span>17:30</span></li>
+				<li><span>18:00</span></li>
+			</ul>
+		</div> <!-- .timeline -->
 
-                    </div>
+		<div class="events">
+			<ul class="wrap">
+				<li class="events-group">
+					<div class="top-info"><span>Lunes</span></div>
+					<ul>
+					</ul>
+				</li>
 
-                </div>
+				<li class="events-group">
+					<div class="top-info"><span>Martes</span></div>
+					<ul>
 
-            </datepicker>
-            <div id="listSchedule" class="list-group w-100 px-0 visible-nd">
-                <button type="button" class="list-group-item list-group-item-action active" aria-current="true">
-                    The current button
-                </button>
-                <button type="button" class="list-group-item list-group-item-action">A second item</button>
-                <button type="button" class="list-group-item list-group-item-action">A third button item</button>
-                <button type="button" class="list-group-item list-group-item-action">A fourth button item</button>
-                <button type="button" class="list-group-item list-group-item-action disable" disabled>A disabled button item</button>
-            </div>
-        </Schedule>
-        <ReservationSumary class="ps-4">
-            <div id="reservationCard" class="card mb-3 visible-nd" style="max-width: 700px;">
-                <div class="card-header bg-gradient">
-                    Resumen de Reserva
-                </div>
+					</ul>
+				</li>
 
-                <div class="row g-0">
-                    <div class="col-md-4">
-                        <img id="picture" src=".." class="img-fluid rounded-start" alt="...">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 id="installationName" class="card-title font-weight-bold "></h5>
-                            <p id="description" class="card-text mb-0"></p>
+				<li class="events-group">
+					<div class="top-info"><span>Miércoles</span></div>
 
-                            <p class="card-text mb-0">
-                                <i class="bi bi-geo-fill"></i>
-                                <span id="location" class="text-primary"></span>
-                            </p>
-                            <p class="card-text mb-1">
-                                <i class="bi bi-calendar-event" aria-hidden="true"></i>
-                                <span id="date" class="text-primary">22 agosto 2023</span>
-                            </p>
+					<ul>
+					</ul>
+				</li>
 
-                            <p class="card-text mb-1">
-                                <i class="bi bi-alarm-fill" aria-label="Alarm icon"></i>
-                                <span id="time" class="text-primary">20:00 - 22:00</span>
-                            </p>
-                            <form method="post">
-                                <input type="hidden" id="emailRequester" asp-for="request.IdInstallation" name="emailRequester" value="@HttpContext.Session.GetString("email")" />
-                                <input type="hidden" id="installationId" asp-for="request.IdInstallation" name="installationId" value="0" />
-                                <input type="hidden" id="dateReservation" asp-for="request.DateRequest" name="dateReservation" value="0" />
-                                <input type="hidden" id="startTimeReservation" asp-for="request.StartTime" name="startTimeReservation" value="0" />
-                                <input type="hidden" id="endTimeReservation" asp-for="request.EndTime" name="endTimeReservation" value="0" />
-                                <button type="submit" class="btn btn-primary button-gradient">Reservar</button>
-                            </form>
+				<li class="events-group">
+					<div class="top-info"><span>Jueves</span></div>
+					<ul>
+					</ul>
+				</li>
 
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </ReservationSumary>
+				<li class="events-group">
+					<div class="top-info"><span>Friday</span></div>
 
-    </div>
+					<ul>
+					</ul>
+				</li>
+				<!--        -->
+				<li class="events-group">
+					<div class="top-info"><span>Sábado</span></div>
+					<ul>
+                    </ul>
+				</li>
+				<!--        -->
+				<!--        -->
+				<li class="events-group">
+					<div class="top-info"><span>Sunday</span></div>
+					<ul>
+					</ul>
+				</li>
+				<!--        -->
+			</ul>
+		</div>
+
+		<div class="event-modal">
+			<header class="header">
+				<div class="content">
+					<span class="event-date"></span>
+					<h3 class="event-name"></h3>
+				</div>
+
+				<div class="header-bg"></div>
+			</header>
+
+			<div class="body">
+				<div class="event-info"></div>
+				<div class="body-bg"></div>
+			</div>
+
+			<a href="#0" class="close">Close</a>
+		</div>
+
+		<div class="cover-layer"></div>
+	</div> <!-- .cd-schedule -->
 </section>
+
