Obtain data of selected installation
Obtain data of selected installation, all data gets loaded corectly. Imagenes can not be changed due to limited space in somee

--- a/CancherksWebApp/Pages/Admin/BuscarInstalacion.cshtml
+++ b/CancherksWebApp/Pages/Admin/BuscarInstalacion.cshtml
@@ -59,7 +59,9 @@
                     <td>@installation.TimeSplitReservation</td>
                     <td>@(installation.isPublic ? "Sí" : "No")</td>
                     <td style="text-align: center;">
-                        <i class="bi bi-pencil-square custom-edit" data-id="@installation.Id" style="cursor:pointer;"></i>
+                        <a asp-page="/Admin/ModificarInstalacion" asp-route-id="@installation.Id">
+                            <i class="bi bi-pencil-square custom-edit" style="cursor:pointer;"></i>
+                        </a>
                     </td>
                 </tr>
             }
