--- a/CancherksWebApp/Pages/Shared/_AdminLayout.cshtml
+++ b/CancherksWebApp/Pages/Shared/_AdminLayout.cshtml
@@ -39,6 +39,7 @@
                         var report1Active = Context.Request.Path.Value.Contains("/Admin/Reportes");
                         var admin1Active = Context.Request.Path.Value.Contains("/Admin/AgregarInstalacion");
                         var admin2Active = Context.Request.Path.Value.Contains("/Admin/BuscarInstalacion");
+                        var admin3Active = Context.Request.Path.Value.Contains("/Admin/ModificarInstalacion");
 
                         if (request1Active)
                         {
@@ -48,7 +49,7 @@
                         {
                             reportArea = true;
                         }
-                        else if (admin1Active || admin2Active)
+                        else if (admin1Active || admin2Active || admin3Active)
                         {
                             adminArea = true;
                         }
@@ -111,7 +112,7 @@
                             Agregar Instalación
                         </a>
                     </li>
-                    <li class="py-2 @(admin2Active ? "inline-active" : "inline-nav-item") ">
+                    <li class="py-2 @(admin2Active || admin3Active ? "inline-active" : "inline-nav-item") ">
                         <a class="aside-link" asp-area="Admin" asp-page="BuscarInstalacion">
                             <i class="bi bi-brush-fill"></i>
                             Modificar Instalación
