--- a/CancherksWebApp/Areas/Admin/Pages/Reportes.cshtml
+++ b/CancherksWebApp/Areas/Admin/Pages/Reportes.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model CancherksWebApp.Pages.Admin.ReportesModel
+@model  CancherksWebApp.Areas.Admin.Pages.ReportesModel
 @{
     var userRole = @Model.role;
     Layout = userRole == "2569" ? "_AdminLayout" : "_ErrorLayout";
