--- a/CancherksWebApp/Pages/Shared/_Layout.cshtml
+++ b/CancherksWebApp/Pages/Shared/_Layout.cshtml
@@ -57,10 +57,10 @@
                             <a class="nav-link @(reportManagementIsActive ? "activeNav" : "")" asp-area="" asp-page="/Admin/Reportes">Reportes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link @(addInstallationManagementIsActive ? "activeNav" : "")" asp-area="" asp-page="/Admin/AgregarInstalacion">Agregar Instalacion</a>
+                            <a class="nav-link @(addInstallationManagementIsActive ? "activeNav" : "")" asp-area="Admin" asp-page="AgregarInstalacion">Agregar Instalacion</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link @(modifyInstallationManagementIsActive ? "activeNav" : "")" asp-area="" asp-page="/Admin/ModificarInstalacion">Modificar Instalacion</a>
+                            <a class="nav-link @(modifyInstallationManagementIsActive ? "activeNav" : "")" asp-area="Admin" asp-page="/Admin/ModificarInstalacion">Modificar Instalacion</a>
                         </li>
                     </ul>
                 </div>
