--- a/CancherksWebApp/Areas/Admin/Pages/AgregarInstalacion.cshtml
+++ b/CancherksWebApp/Areas/Admin/Pages/AgregarInstalacion.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model CancherksWebApp.Pages.Admin.AgregarInstalacionModel
+@model CancherksWebApp.Areas.Admin.Pages.AgregarInstalacionModel
 @{
     var userRole = @Model.role;
     Layout = userRole == "2569" ? "_AdminLayout" : "_ErrorLayout";
