--- a/CancherksWebApp/Areas/Admin/Pages/GestionSolicitudes.cshtml
+++ b/CancherksWebApp/Areas/Admin/Pages/GestionSolicitudes.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model CancherksWebApp.Pages.Admin.GestionSolcitudesModel
+@model  CancherksWebApp.Areas.Admin.Pages.GestionSolcitudesModel
 @{
     var userRole = @Model.role;
     Layout = userRole == "2569" ? "_AdminLayout" : "_ErrorLayout";
