--- a/CancherksWebApp/Areas/Admin/Pages/ModificarInstalacion.cshtml
+++ b/CancherksWebApp/Areas/Admin/Pages/ModificarInstalacion.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model CancherksWebApp.Pages.Admin.ModificarInstalacionModel
+@model  CancherksWebApp.Areas.Admin.Pages.ModificarInstalacionModel
 @{
     var userRole = @Model.role;
     Layout = userRole == "2569" ? "_AdminLayout" : "_ErrorLayout";
