--- a/CancherksWebApp/Areas/Solicitante/Pages/Publicas.cshtml
+++ b/CancherksWebApp/Areas/Solicitante/Pages/Publicas.cshtml
@@ -1,10 +1,11 @@
 ﻿@page
-@model CancherksWebApp.Pages.Solicitante.PublicasModel
+@model CancherksWebApp.Areas.Solicitante.Pages.PublicasModel
 @{
     var userRole = @Model.role;
-    Layout = userRole == "7415" ? "_RequesterLayout" : "_ErrorLayout";
+	Layout = userRole == "2569" || userRole == "7415" ? "_RequesterLayout" : "_ErrorLayout";
 
-    if (userRole != "7415") Response.Redirect("/ErrorPage");
+
+	if ((userRole != "7415" && userRole != "2569")) Response.Redirect("/ErrorPage");
 
 }
 
